--- a/style.css
+++ b/style.css
@@ -1,8 +1,12 @@
 body {
     margin: 0;
     padding: 0;
+    font-family: Helvetica, Arial, sans-serif;
+    font-size: 20px;
 }
 #map {
     height: 100vh; /* Full screen height */
     width: 100vw; /* Full screen width */
+    font-family: Helvetica, Arial, sans-serif;
+    font-size: 16px;
 }
